--- a/src/components/Nav.module.css
+++ b/src/components/Nav.module.css
@@ -1,7 +1,6 @@
 .navbar {
-    position: fixed;
+    position: sticky;
     top: 0;
-    left: 0;
     width: 100%;
     padding: 20px 0;
     z-index: 50;
