--- a/src/pages/AllProjects.module.css
+++ b/src/pages/AllProjects.module.css
@@ -1,5 +1,5 @@
 .allProjectsPage {
-    padding-top: 80px;
+    padding-top: 0;
     min-height: 100vh;
     background-color: var(--bg-color);
     position: relative;
